fix theme icon button scaling on mobile - closes #20

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -67,7 +67,7 @@
     display: flex;
     flex-direction: column-reverse;
     gap: var(--space-xl);
-    margin-block-start: var(--offset-l);
+    margin-block-start: var(--offset-xl);
   }
 
   .footerContainer > section:first-child {
